# zero2prod

./: Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yaml
.sqlx/: query-83780a7736341c8b9678aaca297f765218f34c93353d4a55e8e8703bf841feda.json  query-b16cafd3792e54d30324a0f1b4676e266296c2198cccdc5380d6e55c3400fd9c.json  query-bb4ace6c34d6cfd0697db41cced11b1803b1ba68c63a051b80903abdbf71f07a.json
configuration/: base.yaml
migrations/: 20240628171831_create_subscriptions_table.sql  20240708145401_add_status_to_subscriptions.sql  20240708145703_make_status_not_null_in_subscriptions.sql  20240708155236_create_subscription_tokens_table.sql  20240709181257_create_users_table.sql  20240709190139_rename_password_column.sql  20240711133215_seed_user.sql  20240712124133_create_idempotency_table.sql  20240712135856_relax_null_checks_on_idempotency.sql  20240712165027_create_newsletter_issues_table.sql  20240712170125_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
