[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Mateus Barbosa <mateus@barbosa.dev.br>"]
edition = "2021"

[lib]
# Its a community convention to put the main library code in src/lib.rs. And to leave the name as the same name of the package.
path = "src/lib.rs"

# This is the main entry point of the application. 
# You can leverage the `bin` section to create multiple binaries in the same package.
# But only one lib section is allowed. If you want more, need to use workspaces.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.8.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = "0.14.0"
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.9.1", features = ["v4"] }

# Used only when running tests or examples
# Are not compiled in the final binary
[dev-dependencies]
reqwest = "0.12.5"
