[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Mateus Barbosa <mateus@barbosa.dev.br>"]
edition = "2021"

[lib]
# Its a community convention to put the main library code in src/lib.rs. And to leave the name as the same name of the package.
path = "src/lib.rs"

# This is the main entry point of the application. 
# You can leverage the `bin` section to create multiple binaries in the same package.
# But only one lib section is allowed. If you want more, need to use workspaces.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.8.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = "0.14.0"
once_cell = "1.19.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde-aux = "4.5.0"
sqlx = { version = "0.7.4", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.11"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
unicode-segmentation = "1.11.0"
uuid = { version = "1.9.1", features = ["v4", "serde"] }
validator = "0.18.1"
reqwest = { version = "0.12.5", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.61"
anyhow = "1.0.86"
base64 = "0.22.1"
argon2 = { version = "0.5.3", features = ["std"] }
urlencoding = "2.1.3"
htmlescape = "0.3.1"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-session = { version = "0.9.0", features = ["redis-rs-tls-session"] }
serde_json = "1.0.120"
actix-web-lab = "0.20.2"

# Used only when running tests or examples
# Are not compiled in the final binary
[dev-dependencies]
claims = "0.7.1"
fake = "2.9.2"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde_json = "1.0.120"
serde_urlencoded = "0.7.1"
tokio = { version = "1.38.0", features = ["rt", "macros"] }
wiremock = "0.6.0"
